# codeclaw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflow-templates/: codeclaw-export.properties.json  codeclaw-export.yml
.github/workflows/: publish.yml  test.yml
.jules/: bolt.md
codeclaw/: __init__.py  __main__.py  classifier.py  config.py  daemon.py  parser.py  redactor.py  secrets.py  setup_wizard.py  source_adapters.py  storage.py
codeclaw/cli/: __init__.py  _helpers.py  config.py  console.py  diff.py  export.py  finetune.py  growth.py  projects.py  reset.py  setup.py  tui.py  watch.py
codeclaw/tui/: __init__.py  app.py  commands.py  jobs.py  plugins.py  types.py
docs/: SKILL.md  TUI_INTEGRATION_PLAN.md
tests/: test_cli.py  test_codeclaw_cli_mcp.py  test_docs_consistency.py  test_growth_cli.py  test_new_features.py  test_parser.py  test_reset_cli.py  test_setup_and_projects.py  test_tui_app.py  test_tui_commands.py  test_tui_jobs.py  test_tui_plugins.py
